--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,2 +1,2 @@
-site.url=
-webdriver.chrome.driver=
+page.login.url = https://at-sandbox.workbench.lanit.ru/login/?next=/
+webdriver.chrome.driver = C:\\driver\\chromedriver.exe
